<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.defyApps.myandroidsamples.LoginActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <EditText
            android:id="@+id/edt_txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/label_username"
            android:imeOptions="actionNext"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_txt_username"
            android:layout_marginTop="10dp"
            android:hint="@string/label_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_txt_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/label_login" />

        <TextView
            android:id="@+id/txt_vw_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/label_forgot_password"
            android:textStyle="bold" />

        <View
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txt_vw_forgot_password"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txt_vw_not_a_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/label_not_a_member"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_vw_not_a_member"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:text="@string/label_register" />
    </RelativeLayout>

</ScrollView>